--- a/app/src/main/res/layout/activity_punkt.xml
+++ b/app/src/main/res/layout/activity_punkt.xml
@@ -19,7 +19,14 @@
         android:background="@drawable/tlo02">
 
 
-
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="TextView"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -31,32 +38,27 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:indeterminate="false"
+            android:visibility="gone"
             tools:indeterminate="false" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/text1"/>
 
 
         <ListView
             android:id="@+id/list"
-            android:textAlignment="center"
-
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/progressBar"
+            android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:scrollbars="horizontal"
+            android:textAlignment="center"
             android:visibility="visible" />
     </RelativeLayout>
 
     <include
         layout="@layout/app_bar_punkt"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
@@ -64,6 +66,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="left"
         android:fitsSystemWindows="true"
+        android:visibility="gone"
         app:headerLayout="@layout/nav_header_punkt"
         app:menu="@menu/activity_punkt_drawer" />
 
